# rebook2

./: .gitignore  .pre-commit-config.yaml  README.md  USREPORTS-2.txt  extract_pdf_images.py  pyproject.toml
examples/: mock-sample.ppm  ocr-benchmark-manifest.json
rebook2/: __init__.py  main.py  main_trans.py
rebook2/benchmarking/: __init__.py  cli.py  dataset.py  document.py  runner.py  types.py
rebook2/benchmarking/providers/: __init__.py  base.py  doctr_provider.py  easyocr_provider.py  mock_provider.py  paddleocr_provider.py  tesseract_provider.py
tests/: test_doctr_provider.py  test_document.py  test_extract_pdf_images.py  test_runner.py
